@@ -626,8 +626,9 @@ void review_mode(short mode) {
                         raw_output(FALSE);
                         echo();
                         curs_set(1);
-                        mvgetnstr(24, 0, temppool[p]->name, CREATURE_NAMELEN);
-                        temppool[p]->name[CREATURE_NAMELEN - 1] = '\0';
+                        move(24, 0);
+                        enter_name(temppool[p]->name, CREATURE_NAMELEN);
+
                         curs_set(0);
                         noecho();
                         raw_output(TRUE);
